# edk2

./: .gitmodules  HowToEnalbeRust.md  Readme.md  build_fw.bat  build_fw.sh
BaseTools/Conf/: build_rule.template  tools_def.template
EmulatorPkg/: EmulatorPkg.dec  EmulatorPkg.dsc  EmulatorPkg.fdf
EmulatorPkg/Include/Ppi/: EmuThunk.h
EmulatorPkg/Include/Protocol/: EmuSocket.h
EmulatorPkg/ThunkPpiToProtocolPei/: ThunkPpiToProtocolPei.c  ThunkPpiToProtocolPei.inf
EmulatorPkg/Tpm2/DxeEmuSocketLib/: DxeEmuSocketLib.c  DxeEmuSocketLib.inf
EmulatorPkg/Tpm2/EfiTpmDeviceSelectedPPI/: EfiTpmDeviceSelectedPPI.c  EfiTpmDeviceSelectedPPI.inf
EmulatorPkg/Tpm2/PeiEmuSocketLib/: PeiEmuSocketLib.c  PeiEmuSocketLib.inf
EmulatorPkg/Tpm2/Tpm2Simulator/: Tpm2DeviceLibSimulator.inf  Tpm2SimulatorClient.c
EmulatorPkg/Win/Host/: WinHost.c  WinHost.h  WinHost.inf  WinInclude.h  WinSocketThunk.c
MinOvmf64DxePkg/: MinOvmf64DxePkg.dec  MinOvmf64DxePkg.dsc  MinOvmf64DxePkg.fdf
MinOvmf64DxePkg/Sec/: SecMain.c  SecMain.inf
MinOvmf64DxePkg/Sec/Ia32/: SecEntry.nasm
MinOvmf64DxePkg/Sec/X64/: SecEntry.nasm
MinOvmf64FwPkg/: MinOvmf64FwPkg.dec  MinOvmf64FwPkg.dsc  MinOvmf64FwPkg.fdf
MinOvmf64FwPkg/LoadFwDxe/: LoadFwDxe.c  LoadFwDxe.inf
MinOvmf64FwPkg/ResetVector/: ResetVector.inf
MinOvmf64FwPkg/Sec/: Paging.c  SecMain.c  SecMain.inf
MinOvmf64UefiPkg/: MinOvmf64UefiPkg.dec  MinOvmf64UefiPkg.dsc  MinOvmf64UefiPkg.fdf
MinOvmf64UefiPkg/UefiCore/: DxeMain.h  UefiMain.inf
MinOvmf64UefiPkg/UefiCore/DxeMain/: DxeMain.c  DxeProtocolNotify.c
MinOvmf64UefiPkg/UefiCore/Event/: Tpl.c
MinOvmf64UefiPkg/UefiCore/Hand/: DriverSupport.c
MinOvmf64UefiPkg/UefiCore/Image/: Image.c
MinOvmf64UefiPkg/UefiCore/Mem/: Imem.h  MemInit.c  Page.c  Pool.c
MinOvmfPkg/: MinOvmfPkg.dsc  MinOvmfPkg.fdf  MinOvmfPkg.fdf.inc  VarStore.fdf.inc
MinOvmfPkg/PlatformPei/: Fv.c  MemDetect.c  Platform.c  Platform.h  PlatformPei.inf
MinOvmfPkg/QemuVideoDxe/: QemuVideoDxe.inf  VbeShim.c
NetworkPkg/: NetworkDefines.dsc.inc
OvmfPkg/: OvmfPkgX64.dsc  OvmfPkgX64.fdf
RustPkg/: Readme.md  RustPkg.dsc  RustPkg.fdf
RustPkg/Test/HelloWorld/: Cargo.toml  HelloWorld.inf
RustPkg/Test/HelloWorld/src/: main.rs
RustPkg/Test/HelloWorld2/: Cargo.toml  HelloWorld2.inf
RustPkg/Test/TestBmpApp/: AppSupport.c  TestBmpApp.c  TestBmpApp.inf
RustPkg/Test/TestCryptoLib/: Cargo.toml  Readme.md  TestCryptoLib.inf  make-script.sh  openssl.cnf
RustPkg/Test/TestCryptoLib/src/: ecdsa_data.rs  lib.rs  main.rs  pki_data.rs  rsa_data.rs
RustPkg/Test/TestFmpAuthPkcs7App/: AppSupport.c  TestFmpAuthPkcs7App.c  TestFmpAuthPkcs7App.h  TestFmpAuthPkcs7App.inf
RustPkg/Test/TestRustLangApp/: Cargo.toml  TestRustLangApp.inf  (+1 more)
RustPkg/TestRustLang/TestRustLangLib/: Cargo.toml  TestRustLangLibDebug.inf  TestRustLangLibRelease.inf
RustPkg/TestRustLang/TestRustLangLib/src/: lib.rs
(+49 files in other folders)
