[package]
name = "hello_world"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# example from r-efi.
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic


[dependencies]
r-efi = { path = "../../External/r-efi"}
r-efi-lib = { path = "../../External/r-efi-lib" }
r-efi-services = {path = "../../External/r-efi-services"}
r-efi-str = { path = "../../External/r-efi-str" }
log = "0.4.8"