[package]
name = "test_crypto_lib"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { version="0.16.13", features = ["alloc"]}
untrusted = "0.7.1"
webpki = "0.21.2"
