[package]
name = "test_crypto_lib"
version = "0.1.0"
authors = ["Xiaoyu Lu <xiaoyux.lu@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "test_crypto_lib"
crate-type = ["staticlib"]

[dependencies]

r-efi = { path = "../../External/r-efi"}
efi-lib = { path = "../../External/efi-lib" }
efi-services = {path = "../../External/efi-services"}
efi-str = { path = "../../External/efi-str", version="0.1.0", features=["string"]}
log = "0.4.8"
ring = { path = "../../../../ring", features = ["alloc"]}
untrusted = "0.7.1"
webpki =  { path = "../../../../webpki", default-features = false, features = ["trust_anchor_util"]}

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
