[package]
name = "test_rust_lang_lib"
version = "0.1.0"
authors = ["Jiewen Yao <jiewen.yao@intel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "test_rust_lang_lib"
#crate-type = ["rlib"]
crate-type = ["staticlib", "rlib"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic
overflow-checks = true

[dependencies]
cpuio = "*"
spin = "0.4.9"
r-efi = "2.1.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
